Fixed stretched logo

--- a/cdpp/css/style.css
+++ b/cdpp/css/style.css
@@ -203,7 +203,7 @@
   background-color: #fff;
   padding-top: 10px; }
   #region-header a img {
-    width: 420px;
+    /*width: 420px;*/
     height: auto;
     max-height: 71px;
     margin-bottom: 15px; }
