--- a/cdpp/sass/_header.scss
+++ b/cdpp/sass/_header.scss
@@ -33,7 +33,7 @@
   padding-top: 10px;
   a {
     img {
-      width: 420px;
+      /*width: 420px;*/
       height: auto;
       max-height: 71px;
       margin-bottom: 15px;
